<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Watsi2</string>
    <string name="lblLocation">Location</string>
    <string name="lblMedicalPartner">Medical Partner</string>
    <string name="title_activity_patient_detail">PatientDetail</string>
    <string name="paypal_client_id">AQlMcRBDK-q2VKSt4Bkg2wbNJYT-MQIAL2gmPoXapLGotF4JQ94mgVpvYzQA</string>
    <string name="lableUserName">User!</string>
    <string name="lblBtNewsAction">Fund Treatment</string>
    <string name="lblNewsHeading">You can make a difference !</string>
    <string name="parse_REST_Api_Key">J2aUON2KwGuqAm6nH47qfB3IIABpZtzcd6OTdCte</string>
    <string name="parse_app_id">tezu5wFV9Z59i6HRSmKdfbcfv3wuUh84QlLrFOjJ</string>
    <string name="parse_client_key">SfhVI8iQxgdS63YMEPABsLOTaHoEoc78wJOQJFyS</string>
    <string name="facebook_app_id">783088611711767</string>
    <string name="twitter_consumer_key">J6HoDAdr9LfiPQzlXS3AW5nR4</string>
    <string name="twitter_consumer_secret">I3GbxsVTqp5qBOhPsZTgnxWonrolSzydTXT1he4bev88icjOhY</string>
    <string name="profile_logo_content_description">Watsi</string>
    <string name="profile_title_logged_in">Your are logged in as</string>
    <string name="profile_logout_button_label">Log out</string>
    <string name="profile_title_logged_out">You must be logged in to view your profile</string>
    <string name="profile_login_button_label">Log in</string>

    <string-array name="my_facebook_permissions">
        <item>public_profile</item>
        <item>email</item>
    </string-array>

    <string name="makeDifference">Make a difference !</string>
    <string name="title_activity_splash_screen">Watsi</string>
    <string name="hintName">Enter Full Name</string>
    <string name="hintEmail">Enter your email address</string>
    <string name="hintAmount">Enter Amount</string>
    <string name="btnDonate">Donate</string>
    <string name="tvDonationAnon">Make donation anonymous</string>
    <string name="tvErrEmail">Please enter valid email address</string>
    <string name="tvErrAmount">Minimum amount is $5</string>

</resources>
