<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp" >

    <EditText
        android:id="@+id/tvFullName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/dialog_hint_color"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hintName"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/tvEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFullName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/dialog_hint_color"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress" />

    <codepath.watsiapp.customview.PrefixedEditText
        android:id="@+id/tvAmountToDonate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/dialog_hint_color"
        android:ems="10"
        android:hint="@string/hintAmount"
        android:inputType="numberDecimal" />

    <CheckBox
        android:id="@+id/isAnonymousDonation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAmountToDonate"
        android:layout_below="@+id/tvAmountToDonate"
        android:alpha="0.6"
        android:layout_marginTop="20dp"
        android:text="" />

    <Button
        android:id="@+id/btnDonate"
        style="@style/ParseLoginUI.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/isAnonymousDonation"
        android:layout_centerHorizontal="true"
        android:background="@color/watsi_blue"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:text="@string/btnDonate" />

    <TextView
        android:id="@+id/tvChkBoxLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/isAnonymousDonation"
        android:layout_alignBottom="@+id/isAnonymousDonation"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/isAnonymousDonation"
        android:text="@string/tvDonationAnon"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/dialog_hint_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvErrMsgAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAmountToDonate"
        android:layout_below="@+id/tvAmountToDonate"
        android:textColor="@color/watsi_red"
        android:paddingLeft="10dp"
        android:visibility="gone"
        android:text="@string/tvErrAmount"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvErrMsgEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEmail"
        android:layout_below="@+id/tvEmail"
        android:text="@string/tvErrEmail"
        android:textColor="@color/watsi_red"
        android:paddingLeft="10dp"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>